--- a/src/sass/components/banner.scss
+++ b/src/sass/components/banner.scss
@@ -21,11 +21,17 @@
         line-height: 1.2;
     }
 
+    &__title-text-mask {
+        overflow: hidden;
+    }
+
     &__title-text--blue {
         color: $blue;
     }
 
     &__text {
+        display: flex;
+        flex-wrap: wrap;
         margin-top: 46px;
 
         max-width: 671px;
@@ -33,6 +39,9 @@
         font-size: 30px;
         color: #ffffff;
         line-height: 1.3;
+
+        overflow: hidden;
+        white-space: pre;
     }
 
     &__buttons {
