--- a/src/sass/components/components.scss
+++ b/src/sass/components/components.scss
@@ -1,6 +1,7 @@
 @import './basic.scss';
 @import './header.scss';
 
+@import './logo.scss';
 @import './section.scss';
 @import './button.scss';
 @import './arrow.scss';
