--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -2,13 +2,11 @@
 
 .header {
     width: 100%;
-    padding-bottom: 80px;
 
     position: fixed;
     left: 0;
 
     z-index: 10;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
 
     &__wrapper {
         display: flex;
@@ -33,5 +31,21 @@
 
     &__menu-link:hover, &__menu-link.active {
         color: $blue;
+    }
+
+    &__button {
+        transition: opacity 0.3s ease-out, transform 0.3s ease-out, visibility 0.3s ease-out;
+    }
+
+    &.has-scrolled .logo {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateX(-30%);
+    }
+
+    &.has-scrolled &__button {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateX(30%);
     }
 }
