--- a/src/sass/components/reputation.scss
+++ b/src/sass/components/reputation.scss
@@ -2,11 +2,16 @@
 
 .reputation {
     padding-top: 122px;
+    padding-bottom: 214px;
+    
     position: relative;
     text-align: center;
     overflow: hidden;
 
     &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         position: relative;
     }
 
@@ -15,6 +20,32 @@
         position: relative;
         font-size: 30px;
         line-height: 1.5;
+    }
+
+    &__text-row {
+        display: flex;
+        justify-content: center;
+
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__text-row:before {
+        content: '';
+        width: 100%;
+        height: 2px;
+
+        background-color: $blue;
+        position: absolute;
+        top: 85%;
+
+        transform: translateX(-100%);
+
+        transition: transform 1s ease-in-out;
+    }
+    
+    &__text-row.animation-out:before {
+        transform: translateX(100%);
     }
 
     &__title {
@@ -27,9 +58,12 @@
 
     &__circle {
         position: absolute;
-        top: 151px;
-        left: 50%;
-        transform: translateX(-50%);
+        top: 195px;
+
+        animation-name: circle;
+        animation-iteration-count: infinite;
+        animation-duration: 20s;
+        animation-timing-function: linear;
     }
 
     &__images {
@@ -46,3 +80,12 @@
         z-index: 1;
     }
 }
+
+@keyframes circle {
+    from {
+      transform: rotate(0);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
