--- a/src/sass/components/components.scss
+++ b/src/sass/components/components.scss
@@ -10,6 +10,9 @@
 @import './card.scss';
 @import './carousel.scss';
 @import './particles.scss';
+@import './swiper.scss';
+@import './navigation.scss';
+@import './pagination.scss';
 
 @import './banner.scss';
 @import './reputation.scss';
