--- a/src/sass/components/components.scss
+++ b/src/sass/components/components.scss
@@ -8,11 +8,10 @@
 @import './tabs.scss';
 @import './title.scss';
 @import './card.scss';
-@import './carousel.scss';
 @import './particles.scss';
 @import './swiper.scss';
-@import './navigation.scss';
-@import './pagination.scss';
+@import './swiper-navigation.scss';
+@import './swiper-pagination.scss';
 
 @import './banner.scss';
 @import './reputation.scss';
