--- a/src/sass/components/swiper-pagination.scss
+++ b/src/sass/components/swiper-pagination.scss
@@ -1,5 +1,3 @@
-@import './swiper-vars.scss';
-
 .swiper-pagination {
   position: absolute;
   text-align: center;
@@ -65,7 +63,7 @@
 }
 .swiper-pagination-bullet-active {
   opacity: 1;
-  background: var(--swiper-pagination-color, var(--swiper-theme-color));
+  background: $blue-dark;
 }
 
 .swiper-container-vertical {
@@ -106,12 +104,35 @@
     transition: 200ms transform, 200ms right;
   }
 }
+
+.swiper-pagination-wrapper {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 106%;
+  left: 165px;
+}
+
+.swiper-pagination-count {
+  font-family: $font-b;
+  font-size: 15px;
+  color: #7f7f7f;
+}
+
+.swiper-pagination-count--left{
+  color: $blue-dark;
+}
+
 /* Progress */
 .swiper-pagination-progressbar {
-  background: rgba(0, 0, 0, 0.25);
-  position: absolute;
+  position: relative;
+  width: 164px;
+  height: 2px;
+  margin: 0 25px;
+  background-color: #d5d5d5;
+  
   .swiper-pagination-progressbar-fill {
-    background: var(--swiper-pagination-color, var(--swiper-theme-color));
+    background-color: $blue-dark;
     position: absolute;
     left: 0;
     top: 0;
@@ -126,13 +147,13 @@
   .swiper-container-horizontal > &,
   .swiper-container-vertical > &.swiper-pagination-progressbar-opposite {
     width: 100%;
-    height: 4px;
+    height: 2px;
     left: 0;
     top: 0;
   }
   .swiper-container-vertical > &,
   .swiper-container-horizontal > &.swiper-pagination-progressbar-opposite {
-    width: 4px;
+    width: 2px;
     height: 100%;
     left: 0;
     top: 0;
