--- a/src/sass/components/basic.scss
+++ b/src/sass/components/basic.scss
@@ -57,15 +57,21 @@ input::-webkit-inner-spin-button {
 }
 
 .side-text {
+    pointer-events: none;
     position: absolute;
-    right: 100%;
-    top: 37%;
+    right: calc(100% + 80px);
+    top: 0;
 
     font-family: $font-b;
     color: rgba(0, 0, 0, 0.07);
     font-size: 76px;
-    transform: rotateZ(-90deg);
+    transform: rotateZ(180deg);
+    writing-mode: vertical-rl;
 
     white-space: nowrap;
     z-index: 12;
+
+    &--reputation {
+        top: 0;
+    }
 }
