--- a/src/sass/components/industry.scss
+++ b/src/sass/components/industry.scss
@@ -25,7 +25,8 @@
 
         position: absolute;
         bottom: 0;
-        left: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     &__card {
